# robotic-arm-manipulator

./: .gitignore
roboticarm_description/: CMakeLists.txt  package.xml
roboticarm_description/meshes/: Robot_Arm_AssemblyArm03_1.stl  Robot_Arm_AssemblyGripper_1.001.stl  Robot_Arm_AssemblyGripper_1.stl  Robot_Arm_AssemblyGripper_base.stl  Robot_Arm_AssemblyServoMotorMG996R_2.stl  Robot_Arm_AssemblyServoMotorMicro_2.stl  Robot_Arm_AssemblyServoMotorMicro_3.stl  Robot_Arm_Assemblybase_link.stl  Robot_Arm_Assemblygrip_link_1.001.stl  Robot_Arm_Assemblygrip_link_1.003.stl  Robot_Arm_Assemblygrip_link_1.004.stl  ServoMotorMG996R_1.stl  ServoMotorMG996R_3.stl  Waist.stl
roboticarm_description/urdf/: roboticArm.urdf.xacro
src/roboticarm_description/: package.xml
src/roboticarm_description/launch/: display.launch
src/roboticarm_description/meshes/: Arm01_1.stl  Arm02_1.stl  Arm03_1.stl  Gripper_1.001.stl  Gripper_1.stl  Gripper_base.stl  Waist.stl  base_link.stl  gear2.001.stl  gear2.002.stl  gear2.stl  grip_link_1.001.stl  grip_link_1.002.stl  grip_link_1.003.stl  grip_link_1.004.stl
src/roboticarm_description/rviz/: display.rviz
src/roboticarm_description/urdf/: roboticArm.urdf.xacro
