<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboticarm_description</name>
  <version>0.0.0</version>
  <description>The roboticarm_description package</description>
  <maintainer email="namanpatel024@gmail.com">Naman Patel</maintainer>
  <license>BSD</license>

  <author email="namanpatel024@gmail.com">Naman Patel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
